--- a/dark.css
+++ b/dark.css
@@ -1,3 +1,6 @@
 ts-message {
   background-color: rgba(41, 41, 41, 1) !important;
 }
+
+.day_divider {
+  background-color: rgba(41,41,41,1) !important;
