--- a/dark.css
+++ b/dark.css
@@ -1,7 +1,3 @@
-ts-message {
-  background-color: rgba(41, 41, 41, 1) !important;
-}
-
-.day_divider {
+.day_container {
   background-color: rgba(41,41,41,1) !important;
 }
