--- a/dark.css
+++ b/dark.css
@@ -1,3 +1,7 @@
 .day_container {
   background-color: rgba(41,41,41,1) !important;
 }
+
+.btn_unstyle {
+  background-color: rgba(68, 68, 68, 1) !important;
+}
