--- a/dark.css
+++ b/dark.css
@@ -1,8 +1,11 @@
 .day_container {
-  color: rgba(255, 255, 255, 1) !important;
   background-color: rgba(41,41,41,1) !important;
 }
 
 .btn_unstyle {
   background-color: rgba(68, 68, 68, 1) !important;
+}
+
+.message_content_header, .message_body {
+  color: rgba(255, 255, 255, 1) !important;
 }
