--- a/dark.css
+++ b/dark.css
@@ -8,7 +8,9 @@
   background-color: rgba(68, 68, 68, 1) !important;
 }
 
-.message_content_header, .message_body {
+.message_body,
+.message_content_header,
+.message_sender {
   color: rgba(255, 255, 255, 1) !important;
 }
 
