--- a/dark.css
+++ b/dark.css
@@ -7,7 +7,9 @@
   background-color: rgba(41,41,41,1) !important;
 }
 
-.btn_unstyle {
+.btn_unstyle,
+.column_border,
+.day_divider {
   background-color: rgba(68, 68, 68, 1) !important;
 }
 
@@ -15,6 +17,7 @@
 #channel_title,
 #channel_members_toggle_count_count,
 #pinned_item_count_count,
+.day_divider,
 .message_body,
 .message_content_header,
 .message_content .message_content_header .message_content_header_left .message_sender {
