--- a/dark.css
+++ b/dark.css
@@ -18,6 +18,7 @@ ts-message:hover,
 /* White Text */
 #channel_title,
 #channel_members_toggle_count_count,
+#msg_input,
 #pinned_item_count_count,
 .day_divider,
 .message_body,
