--- a/dark.css
+++ b/dark.css
@@ -7,8 +7,10 @@
   background-color: rgba(41,41,41,1) !important;
 }
 
+code,
 ts-message:hover,
 #msg_input,
+.bot_label,
 .btn_unstyle,
 .column_border,
 .day_divider_label,
@@ -22,6 +24,7 @@ ts-message:hover,
 #channel_members_toggle_count_count,
 #msg_input,
 #pinned_item_count_count,
+.bot_label,
 .day_divider,
 .message_body,
 .message_content_header,
@@ -46,7 +49,6 @@ code,
 }
 
 code {
-  background-color: rgba(68,68,68,1) !important;
   border-color: rgba(68,68,68,1) !important;
 }
 
