--- a/dark.css
+++ b/dark.css
@@ -57,3 +57,8 @@ a:link,
 a:visited {
   color: rgba(114, 202, 255, 1) !important;
 }
+
+.mention {
+  color: rgba(0,0,0,1) !important;
+  background-color: rgba(211,155,70,1) !important;
+}
