--- a/dark.css
+++ b/dark.css
@@ -2,6 +2,7 @@
 #client_body:not(.onboarding):before,
 #end_div,
 #footer_msgs,
+#messages_container.has_top_messages_banner:before,
 .channel_header,
 .day_container {
   background-color: rgba(41,41,41,1) !important;
