--- a/dark.css
+++ b/dark.css
@@ -1,5 +1,7 @@
 #client_header,
 #client_body:not(.onboarding):before,
+#downloads_tab,
+#downloads_tab_header,
 #end_div,
 #footer_msgs,
 #messages_container.has_top_messages_banner:before,
