--- a/dark.css
+++ b/dark.css
@@ -1,6 +1,7 @@
 #client_header,
 #client_body:not(.onboarding):before,
 #downloads_tab,
+#downloads_tab.supports_open_file #downloads_shift_hint,
 #downloads_tab_header,
 #end_div,
 #footer_msgs,
