--- a/dark.css
+++ b/dark.css
@@ -6,6 +6,7 @@
 #end_div,
 #footer_msgs,
 #messages_container.has_top_messages_banner:before,
+#msgs_scroller_div,
 .channel_header,
 .day_container {
   background-color: rgba(41,41,41,1) !important;
