--- a/dark.css
+++ b/dark.css
@@ -72,6 +72,7 @@ a:visited {
   color: rgba(114, 202, 255, 1) !important;
 }
 
+.match,
 .mention {
   color: rgba(0,0,0,1) !important;
   background-color: rgba(211,155,70,1) !important;
