--- a/dark.css
+++ b/dark.css
@@ -12,6 +12,7 @@ ts-thread .thread-messages,
 #threads_msgs_scroller_div,
 .channel_header,
 .channel_page_section,
+.contents_container,
 .day_container,
 .flex_content_scroller,
 .search_message_result,
@@ -38,11 +39,17 @@ ts-message:hover,
 }
 
 /* White Text */
+ts-icon.greigh,
 #channel_title,
 #channel_members_toggle_count_count,
+#fs_modal h1, #fs_modal h2, #fs_modal h3, #fs_modal h4, #fs_modal h5,
 #msg_input,
 #pinned_item_count_count,
 .bot_label,
+.channel_browser_creator_name,
+.channel_browser_member_count_container.greigh,
+.channel_browser_row,
+.channel_browser_row_header,
 .comment,
 .day_divider,
 .divider_label,
